# lambda-observability

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  deny.toml  flake.nix  release-plz.toml
.github/workflows/: ci.yml  dependabot-automerge.yml  release-plz.yml
crates/lambda-simulator/: CHANGELOG.md  Cargo.toml  README.md
crates/lambda-simulator/assets/: demo.tape  freeze_demo.tape
crates/lambda-simulator/benches/: invocation.rs
crates/lambda-simulator/examples/: test_extension.rs  test_runtime.rs
crates/lambda-simulator/src/: error.rs  extension.rs  extension_readiness.rs  extensions_api.rs  freeze.rs  invocation.rs  lib.rs  process.rs  response_body.rs  runtime_api.rs  simulator.rs  state.rs  telemetry.rs  telemetry_api.rs  telemetry_state.rs
crates/lambda-simulator/tests/: concurrency_test.rs  demo_test.rs  e2e_process_spawn_test.rs  error_scenarios_test.rs  extension_readiness_test.rs  extensions_test.rs  freeze_demo_test.rs  freeze_test.rs  integration_test.rs  invocation_lifecycle_test.rs  process_spawn_test.rs  real_lambda_test.rs  shutdown_test.rs  telemetry_test.rs  timing_test.rs
crates/lambda-simulator/tests/common/: mod.rs
crates/lambda-simulator/tests/fixtures/: extension.rs  runtime.rs
crates/opentelemetry-configuration/: CHANGELOG.md  Cargo.toml  README.md  TODO.md
crates/opentelemetry-configuration/src/: builder.rs  config.rs  error.rs  guard.rs  lib.rs
crates/opentelemetry-lambda-example/: CHANGELOG.md  Cargo.toml  README.md
crates/opentelemetry-lambda-example/src/: lib.rs
crates/opentelemetry-lambda-extension/: CHANGELOG.md  Cargo.toml  README.md
crates/opentelemetry-lambda-extension/benches/: conversion.rs
crates/opentelemetry-lambda-extension/src/: aggregator.rs  config.rs  context.rs  conversion.rs  error.rs  exporter.rs  flush.rs  lib.rs  main.rs  receiver.rs  resource.rs  runtime.rs  service.rs  telemetry.rs  tracing.rs
crates/opentelemetry-lambda-extension/tests/: E2E_TEST_PLAN.md  adaptive_export_test.rs  e2e_integration_test.rs  exporter_test.rs  otel_compliance_test.rs  receiver_test.rs
crates/opentelemetry-lambda-extension/tests/common/: mod.rs
crates/opentelemetry-lambda-tower/: CHANGELOG.md  Cargo.toml  README.md
crates/opentelemetry-lambda-tower/examples/: http_handler.rs  sqs_handler.rs
crates/opentelemetry-lambda-tower/fuzz/: Cargo.toml
crates/opentelemetry-lambda-tower/fuzz/fuzz_targets/: fuzz_traceparent.rs  fuzz_xray_header.rs
crates/opentelemetry-lambda-tower/src/: cold_start.rs  extractor.rs  future.rs  layer.rs  lib.rs  service.rs
crates/opentelemetry-lambda-tower/src/extractors/: http.rs  lambda_http.rs  mod.rs  sns.rs  sqs.rs
crates/opentelemetry-lambda-tower/tests/: middleware_test.rs  sample_events.rs  semantic_conventions.rs
src/: lib.rs
tests/: integration_harness.rs
