[package]
name = "lambda-simulator"
version = "0.1.5"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors = ["Daniel Verrall"]
description = "High-fidelity AWS Lambda Runtime API simulator for testing Lambda runtimes and extensions locally"
repository = "https://github.com/djvcom/lambda-observability"
documentation = "https://docs.rs/lambda-simulator"
readme = "README.md"
keywords = ["lambda", "aws", "testing", "simulator", "runtime"]
categories = ["development-tools::testing", "simulation"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
axum.workspace = true
chrono.workspace = true
http-body = "1.0"
nix = { version = "0.30", features = ["signal", "process"] }
pin-project-lite = "0.2"
reqwest = { workspace = true, features = ["blocking"] }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tower = "0.5"
tracing.workspace = true
uuid = { workspace = true, features = ["v4"] }

[dev-dependencies]
aws_lambda_events = "1.0"
bytes = "1.11"
criterion = "0.8.1"
hex = "0.4.3"
http-body-util = "0.1"
lambda_runtime = { version = "1.0", features = ["tracing"] }
mock-collector = "0.2.7"
opentelemetry.workspace = true
opentelemetry-otlp.workspace = true
opentelemetry_sdk.workspace = true
proptest = "1.9.0"
regex = "1.12.2"
serial_test = "3.3.1"
temp-env = { version = "0.3", features = ["async_closure"] }
tokio = { workspace = true, features = ["test-util"] }
tracing-subscriber = { workspace = true, features = ["fmt", "ansi"] }

[[bench]]
name = "invocation"
harness = false

[[bin]]
name = "test_runtime"
path = "tests/fixtures/runtime.rs"
test = false
bench = false

[[bin]]
name = "test_extension"
path = "tests/fixtures/extension.rs"
test = false
bench = false

