[package]
name = "opentelemetry-configuration"
version = "0.2.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors = ["Daniel Verrall"]
description = "Opinionated OpenTelemetry SDK configuration wiring together tracing, OTLP export, and lifecycle management"
repository = "https://github.com/djvcom/lambda-observability"
documentation = "https://docs.rs/opentelemetry-configuration"
readme = "README.md"
keywords = ["opentelemetry", "telemetry", "tracing", "otlp", "observability"]
categories = ["development-tools::profiling", "development-tools::debugging"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
figment = { version = "0.10.19", features = ["env", "toml"] }
humantime-serde = "1.1.1"
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
opentelemetry-appender-tracing = "0.31.1"
opentelemetry-otlp = { workspace = true, features = ["http-proto", "grpc-tonic"] }
opentelemetry-proto = { workspace = true }
prost = "0.14.1"
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tonic = "0.14.2"
tracing = { workspace = true }
tracing-opentelemetry = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
opentelemetry-resource-detectors = "0.10.0"
opentelemetry-semantic-conventions = "0.31.0"

[dev-dependencies]
mock-collector = "0.2.7"
temp-env = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
serial_test = "3.2.0"
