[package]
name = "opentelemetry-lambda-example"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors = ["Daniel Verrall"]
description = "Example Lambda function with OpenTelemetry instrumentation for testing the OTel extension"
repository = "https://github.com/djvcom/lambda-observability"
documentation = "https://docs.rs/opentelemetry-lambda-example"
readme = "README.md"
keywords = ["lambda", "aws", "opentelemetry", "example"]
categories = ["development-tools::testing"]

[dependencies]
lambda_runtime.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
opentelemetry.workspace = true
opentelemetry_sdk.workspace = true
opentelemetry-otlp.workspace = true
aws_lambda_events = { version = "0.16", default-features = false, features = ["apigw", "sqs"] }
opentelemetry-lambda-tower.workspace = true
tower = "0.5"
tracing-opentelemetry.workspace = true
tracing-subscriber.workspace = true
opentelemetry-configuration = { version = "0.1.0", path = "../opentelemetry-configuration" }

[dev-dependencies]
lambda-simulator.workspace = true
