[package]
name = "opentelemetry-lambda-example"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors = ["Daniel Verrall"]
description = "Example Lambda function with OpenTelemetry instrumentation for testing the OTel extension"
repository = "https://github.com/djvcom/lambda-observability"
readme = "README.md"
publish = false

[dependencies]
lambda_runtime.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
opentelemetry.workspace = true
opentelemetry_sdk.workspace = true
opentelemetry-otlp.workspace = true
aws_lambda_events = { version = "1.0", default-features = false, features = ["apigw", "sqs"] }
opentelemetry-lambda-tower.workspace = true
tower = "0.5"
tracing-opentelemetry.workspace = true
tracing-subscriber.workspace = true
opentelemetry-configuration = { version = "0.1.2", path = "../opentelemetry-configuration" }

[dev-dependencies]
lambda-simulator.workspace = true
